--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ matplotlib==3.7.2
 scikit-image==0.21.0
 Werkzeug==2.3.7
 joblib==1.3.2
+google-generativeai>=0.3.1,<0.4.0
+python-dotenv>=1.0.1
+# File yaml
+pyyaml==6.0.2
+
